# Exam-Preparation-AI-Agent

./: .env.template  .gitignore  .pre-commit-config.yaml  README.md  TESTING_GUIDE.md  TEST_README.md  WORKSHOP_GUIDE.md  package.json  playwright.config.js  pytest.ini  ruff.toml
.github/workflows/: ruff.yml
backend/: pyproject.toml  ruff.toml
backend/app/: __init__.py  assistant_agent.py  config.py  documents.py  main.py  memory_store.py  reference_graph.py  server.py  vector_store_service.py
backend/app/agents/: __init__.py  base.py  flashcard.py  intent_classifier.py  research.py  summarizer.py
backend/app/agents_sdk/: __init__.py  agent_runner.py  agents.py  mcp.py  models.py  notion_mcp.py  prompts.py  tools.py
backend/app/models/: __init__.py  document_metadata.py  documents.py
backend/app/routers/: __init__.py  agent_workflow.py  chatkit.py  documents.py  study_agents.py  study_agents_sdk.py  vector_store.py
backend/app/services/: __init__.py  config.py  document_summarizer.py  log_service.py  memory_store.py  server.py  vector_store_service.py
backend/chatkit_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/data/: document_metadata.json
backend/data/uploaded_files/: file-2ba1XCjBS8pHxerrsWHyDt_test_upload.txt
examples/: anki.py  flight_agent.py  language.py  memory_poc.py  notion.py  story_teller.py  tinker.py  weather.py
frontend/: FILE_UPLOAD_IMPLEMENTATION.md  package.json  vite.config.ts
resources/: AGENTS_PRESENTATION.md
setup/: SETUP_GUIDE.md  setup_check.bat  setup_check.py  setup_check.sh
(+24 files in other folders)
